fixed issue with shop by filter not showing properly depending on device size

--- a/pcss/pages/_category.pcss
+++ b/pcss/pages/_category.pcss
@@ -81,7 +81,7 @@
 }
 
 .layered-nav {
-    display: none;
+    display: block;
     float: left;
     width: 20%;
     padding-right: pxtorem(31.33);
